Couple of tweaks

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -25,7 +25,10 @@ html(lang='en')
 					ul.nav.navbar-nav.navbar-right
 						//Display Login, or profile stuff if already logged in
 						li
+							a Register
+						li
 							a Login
 		.container-fluid
-			block content
-				h1 Welcome to Helping Hand!
+			.text-center
+				block content
+					h1 Welcome to Helping Hand!
