--- a/templates/index.jade
+++ b/templates/index.jade
@@ -1,4 +1,5 @@
 extends ./base.jade
 
 block content
-	p Hello Friends!
+	h1 Welcome to Helping Hand!
+	p Please create an account or login to begin using the service.
