--- a/templates/login.jade
+++ b/templates/login.jade
@@ -9,7 +9,7 @@ block content
 		.row
 			.col-md-4
 			.col-md-4
-				input.form-control.input-normal(type='text', id='username', placeholder='Username', required)
-				input.form-control(type='password', id='password', placeholder='Password', required)
+				input.form-control.input-normal(type='text', name='username', placeholder='Username', required)
+				input.form-control(type='password', name='password', placeholder='Password', required)
 				button.btn.btn-lg.btn-primary.btn-block.btn-signin(type='submit') Login
 			.col-md-4
