--- a/templates/create.jade
+++ b/templates/create.jade
@@ -10,7 +10,7 @@ block content
 		.row
 			.col-md-4
 				//title
-				input.form-control.input-normal(type='text', id='title', placeholder='Title', required)
+				input.form-control.input-normal(type='text', id='title', placeholder='Title', required, autofocus)
 		.row
 			.col-md-6
 				textarea.form-control(id='description', placeholder='Description', rows='5')
