--- a/templates/profile.jade
+++ b/templates/profile.jade
@@ -2,7 +2,8 @@ extends ./base.jade
 
 block title
 	//Make this the username of the current user
-	title Temp
+	title #{username}
 
 block content
 	//Print the user
+	p #{username}
