--- a/templates/login.jade
+++ b/templates/login.jade
@@ -4,12 +4,21 @@ block title
 	title Login
 
 block content
+	- var messages = get_flashed_messages()
 	h1 Login
+	if messages
+		each msg in messages
+			h4
+				i #{msg}
 	form.form-signin(method='post', action='/login')
 		.row
 			.col-md-4
 			.col-md-4
-				input.form-control.input-normal(type='text', name='username', placeholder='Username', required)
+				input.form-control.input-normal(type='text', name='username', placeholder='Username', required, autofocus)
 				input.form-control(type='password', name='password', placeholder='Password', required)
-				button.btn.btn-lg.btn-primary.btn-block.btn-signin(type='submit') Login
 			.col-md-4
+		.row
+			.col-md-5
+			.col-md-2
+				button.btn.btn-lg.btn-primary.btn-block.btn-signin(type='submit') Login
+			.col-md-5
