--- a/templates/create.jade
+++ b/templates/create.jade
@@ -10,15 +10,15 @@ block content
 		.row
 			.col-md-4
 				//title
-				input.form-control.input-normal(type='text', id='title', placeholder='Title', required, autofocus)
+				input.form-control.input-normal(type='text', name='title', placeholder='Title', required, autofocus)
 		.row
 			.col-md-6
-				textarea.form-control(id='description', placeholder='Description', rows='5')
+				textarea.form-control(name='description', placeholder='Description', rows='5')
 				input.form-control(type='text', name='address', placeholder='Address')
 		.row
 			.col-md-3
 				//Time of job
-				input.form-control.input-normal(type='text', id='time', placeholder='Time', required)
+				input.form-control.input-normal(type='text', name='time', placeholder='Time', required)
 		.row
 			.col-md-1
 				button.btn.btn-primary.btn-block.btn-signin(type='submit') Submit
