--- a/templates/profile.jade
+++ b/templates/profile.jade
@@ -6,4 +6,12 @@ block title
 
 block content
 	//Print the user
-	p #{username}
+	h1 #{username}
+	p Email: #{email}
+	p Phone number: #{phone}
+	p Type: #{type}
+	br
+	if session.user == username
+		a(href='/profile/'+username+'/edit') Edit
+		br
+		a(href='/profile/'+username+'/delete') Delete
