--- a/templates/register.jade
+++ b/templates/register.jade
@@ -16,18 +16,19 @@ block content
 			.col-md-4
 				input.form-control.input-normal(type='text', name='username', placeholder='Username', required, autofocus)
 				input.form-control.input-normal(type='email', name='email', placeholder='Email Address', required)
+				input.form-control.input-normal(type='number', name='phone', placeholder='Phone')
 				input.form-control(type='password', name='password', placeholder='Password', required)
 				p.text-left
-					input#client(type='radio', name='typeuser', checked='checked')
+					input(type='radio', name='typeuser', value='client', checked='checked')
 					|    Client
 				p.text-left
-					input#worker(type='radio', name='typeuser')
+					input(type='radio', name='typeuser', value='worker')
 					|    Worker
 			.col-md-4
 		.row
 			.col-md-5
 			.col-md-2
-				button.btn.btn-lg.btn-primary.btn-block.btn-signin(type='submit') Login
+				button.btn.btn-lg.btn-primary.btn-block.btn-signin(type='submit') Register
 			.col-md-5
 
 //Register: Username, email, password, worker/user
