--- a/templates/base.jade
+++ b/templates/base.jade
@@ -21,9 +21,7 @@ html(lang='en')
 						li
 							a(href='/create') Create
 						li
-							a Browse
-						li
-							a Search
+							a(href='/search') Search
 
 					ul.nav.navbar-nav.navbar-right
 						//Display Login, or profile stuff if already logged in
