--- a/templates/base.jade
+++ b/templates/base.jade
@@ -19,9 +19,14 @@ html(lang='en')
 						li
 							a(href='/') Home
 						li
-							a(href='/create') Create
-						li
 							a(href='/search') Search
+
+						if session.user
+							if session.type == 'client'
+								li
+									a(href='/requests') Requests
+								li
+									a(href='/create') Create
 
 					ul.nav.navbar-nav.navbar-right
 						//Display Login, or profile stuff if already logged in
