added pending tab in navbar

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -27,6 +27,9 @@ html(lang='en')
 									a(href='/requests') Requests
 								li
 									a(href='/create') Create
+							else
+								li
+									a(href='/pending') Pending
 
 					ul.nav.navbar-nav.navbar-right
 						//Display Login, or profile stuff if already logged in
