--- a/templates/request.jade
+++ b/templates/request.jade
@@ -5,7 +5,7 @@ block title
 
 block content
 	.text-center
-		h1 title
+		h1 #{title}
 		p Client 
 			a(href='/profile/'+client_username) #{client_username}
 		p #{decription}
