--- a/templates/request.jade
+++ b/templates/request.jade
@@ -8,9 +8,9 @@ block content
 	.col-md-6
 		.panel.panel-default.text-left(style="padding-left:2%")
 			h1 #{title}
+			p #{description}
 			p Client: 
 				a(href='/profile/'+client_username) #{client_username}
-			p #{decription}
 			p Time: #{schedule}
 			p Address #{address}
 			p Workers:
@@ -20,5 +20,7 @@ block content
 					a(href='/profile/'+worker[0]) #{worker[0]}
 			if session.user == client_username
 				p
-				a(href='edit me') Edit
+				a(href='/requests/'+id+'/edit') Edit
+				br
+				a(href='/requests/'+id+'/delete') Delete
 			p
