--- a/templates/searchRequests.jade
+++ b/templates/searchRequests.jade
@@ -26,7 +26,7 @@ block content
 				each res in results
 					.col-md-6
 						ul.list-group
-							h4.list-group-item
+							h4.list-group-item.list-group-item-info
 								a(href='/requests/'+'#{res[0]}') #{res[2]}
 							p.list-group-item #{res[3]}
 							p.list-group-item Time: #{res[4]}
