--- a/templates/pending.jade
+++ b/templates/pending.jade
@@ -1,15 +1,15 @@
 extends ./base.jade
 
 block title
-	title Pending
+	title #{title}
 
 block content
-	if requests
-		each res in requests
-			h2 
-				a(href='/requests/'+'#{res[0]}') #{res[2]}
-			p #{res[3]}
-			p Time: #{res[4]}
-			p Address: #{res[5]}
-	else
-		p No results found
+	.col-md-3
+	.col-md-6
+		.panel.panel-default.text-left(style="padding-left:2%")
+			h1 #{title}
+			p #{description}
+			p Client: 
+				a(href='/profile/'+client_username) #{client_username}
+			p Time: #{schedule}
+			p Address #{address}
