More appearance changes

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -30,6 +30,8 @@ html(lang='en')
 							else
 								li
 									a(href='/pending') Pending
+							li
+								a(href='/contracts') Contracts
 
 					ul.nav.navbar-nav.navbar-right
 						//Display Login, or profile stuff if already logged in
