--- a/templates/contracts/contract.jade
+++ b/templates/contracts/contract.jade
@@ -1,17 +1,13 @@
 extends ./base.jade
 
 block title
-	title #{title}
+	title Contract #{results[0]}
 
 block content
 	.col-md-3
 	.col-md-6
 		.panel.panel-default.text-left(style="padding-left:2%")
-			h1 #{title}
-			p #{description}
-			p Client 
-				a(href='/profile/'+client_username) #{client_username}
-			p Worker 
-				a(hred='/profile/'+worker_username) #{worker_username}
-			p Address #{address}
-			p Money #{money}
+			h1 Contract #{results[0]}
+			p Worker: 
+				a(hred='/profile/'+results[1]) #{results[1]}
+			p Time: #{results[3]}
