Create contract form

--- a/templates/contracts/createContract.jade
+++ b/templates/contracts/createContract.jade
@@ -6,21 +6,21 @@ block title
 block content
 	//client, worker, service_id, title, description, time
 	.text-left
-	form(method='POST', action='/createcontract')
+	form(method='POST', action='/submitContract')
 		.row
 			.col-md-6
-				.row
+				.row.text-left
 					.col-md-12
-						h1.text-left Create Contract
+						h1 Create Contract
 						h3 #{title}
 						p #{description}
-						p #{address}
+						p Address: #{address}
 						input(type='hidden', name='service_id', value=service_id)
 						input(type='hidden', name='worker_username', value=worker_username)
 				.row
 					.col-md-6
 						//Time of job
-						input.form-control.input-normal(type='text', name='time', placeholder='Time', required)
+						input.form-control.input-normal(type='text', name='time', placeholder='Time', required, value=time)
 						p
 				.row
 					.col-md-2
