--- a/templates/requests/viewRequests.jade
+++ b/templates/requests/viewRequests.jade
@@ -6,12 +6,15 @@ block title
 block content
 	if requests
 		each res in requests
-			.col-md-6
-				ul.list-group
-					h4.list-group-item.list-group-item-info
-						a(href='/requests/'+'#{res[0]}') #{res[2]}
-					p.list-group-item #{res[3]}
-					p.list-group-item Time: #{res[4]}
-					p.list-group-item Address: #{res[5]}
+			if res[6]
+				//Nothing
+			else
+				.col-md-6
+					ul.list-group
+						h4.list-group-item.list-group-item-info
+							a(href='/requests/'+'#{res[0]}') #{res[2]}
+						p.list-group-item #{res[3]}
+						p.list-group-item Time: #{res[4]}
+						p.list-group-item Address: #{res[5]}
 	else
 		p No results found
