--- a/templates/contracts/viewContracts.jade
+++ b/templates/contracts/viewContracts.jade
@@ -9,7 +9,7 @@ block content
 			.col-md-6
 				ul.list-group
 					h4.list-group-item.list-group-item-info
-						a(href='/contracts/'+'#{res[0]}') Contract #{res[0]}
+						a(href='/contracts/'+'#{res[0]}') #{res[0]}
 					p.list-group-item Client: 
 						a(href='/profile/'+'#{res[1]}')
 						#{res[1]}
