--- a/templates/contracts/contract.jade
+++ b/templates/contracts/contract.jade
@@ -9,6 +9,7 @@ block content
 		.panel.panel-default.text-left(style="padding-left:2%")
 			h1 #{result[0]}
 			p Client:
-			p Worker: 
 				a(href='/profile/'+result[1]) #{result[1]}
+			p Worker: 
+				a(href='/profile/'+result[2]) #{result[2]}
 			p Time: #{result[3]}
