--- a/templates/contracts/viewContracts.jade
+++ b/templates/contracts/viewContracts.jade
@@ -9,10 +9,9 @@ block content
 			.col-md-6
 				ul.list-group
 					h4.list-group-item.list-group-item-info
-						a(href='/contracts/'+'#{res[0]}') #{res[0]}
+						a(href='/contracts/'+'#{res[4]}') #{res[0]}
 					p.list-group-item Client: 
-						a(href='/profile/'+'#{res[1]}')
-						#{res[1]}
+						a(href='/profile/'+'#{res[1]}') #{res[1]}
 					p.list-group-item Worker: 
 						a(href='/profile/'+'#{res[2]}') #{res[2]}
 					p.list-group-item Start Time: #{res[3]}
