--- a/templates/contracts/viewContracts.jade
+++ b/templates/contracts/viewContracts.jade
@@ -15,5 +15,6 @@ block content
 					p.list-group-item Worker: 
 						a(href='/profile/'+'#{res[2]}') #{res[2]}
 					p.list-group-item Start Time: #{res[3]}
+					p.list-group-item Status: #{res[5]}
 	else
 		p No results found	
