Added description to contracts

--- a/templates/contracts/contract.jade
+++ b/templates/contracts/contract.jade
@@ -8,9 +8,10 @@ block content
 	.col-md-6
 		.panel.panel-default.text-left(style="padding-left:2%")
 			h1 #{result[0]}
+			p #{result[1]}
 			p Client: 
-				a(href='/profile/'+result[1]) #{result[1]}
-			p Worker: 
 				a(href='/profile/'+result[2]) #{result[2]}
-			p Time: #{result[3]}
-			p Status: #{result[4]}
+			p Worker: 
+				a(href='/profile/'+result[3]) #{result[3]}
+			p Time: #{result[4]}
+			p Status: #{result[5]}
