--- a/templates/contracts/contract.jade
+++ b/templates/contracts/contract.jade
@@ -16,9 +16,9 @@ block content
 				a(href='/profile/'+result[3]) #{result[3]}
 			p Time: #{result[4]}
 			p Status: #{result[5]}
-		//if status? = 
-		.col-md-6
-			a.btn.btn-lg.btn-success.btn-block(href='/contracts/'+id+'/accept') Accept
-		.col-md-6
-			a.btn.btn-lg.btn-danger.btn-block(href='/contracts/'+id+'/deny') Deny
+		if result[5] == 'pending'
+			.col-md-6
+				a.btn.btn-lg.btn-success.btn-block(href='/contracts/'+id+'/accept') Accept
+			.col-md-6
+				a.btn.btn-lg.btn-danger.btn-block(href='/contracts/'+id+'/deny') Deny
 	.col-md-3
