Fixed description bug, added interested buttons to individual request pages

--- a/templates/requests/editRequest.jade
+++ b/templates/requests/editRequest.jade
@@ -19,7 +19,7 @@ block content
 				.row
 					.col-md-12
 						//Leave in the random caret
-						textarea.form-control(name='description', placeholder='Description', rows='5')< 
+						textarea.form-control(name='description', placeholder='Description', rows='5')
 							| #{description}
 						p
 						input.form-control(type='text', name='address', placeholder='Address', value=address)
