--- a/templates/base.jade
+++ b/templates/base.jade
@@ -39,7 +39,8 @@ html(lang='en')
 						if session.user
 							li
 								a(href='/notifications') Notifications 
-									span.badge #{session.notifications}
+									if session.notifications != 0
+										span.badge.progress-bar-success #{session.notifications}
 							li
 								- var url = '/profile/'+session.user
 								a(href=url) #{session.user}
