Fixed a lot of things

--- a/templates/contracts/viewContracts.jade
+++ b/templates/contracts/viewContracts.jade
@@ -21,7 +21,7 @@ block content
 						p.list-group-item Status: #{res[6]}
 	.row
 		if pending
-			h2 Received Contracts
+			h2 Pending Contracts
 			each res in pending
 				.col-md-6
 					ul.list-group
