--- a/templates/requests/viewRequests.jade
+++ b/templates/requests/viewRequests.jade
@@ -10,7 +10,7 @@ block content
 				ul.list-group
 					h4.list-group-item.list-group-item-info
 						a(href='/requests/'+'#{res[0]}') #{res[2]}
-					p.list-group-item #{res[3]}
+					//p.list-group-item #{res[3]}
 					p.list-group-item Time: #{res[4]}
 					p.list-group-item Address: #{res[5]}
 	else
