Removed description from the rest of list views

--- a/templates/contracts/viewContracts.jade
+++ b/templates/contracts/viewContracts.jade
@@ -12,7 +12,7 @@ block content
 					ul.list-group
 						h4.list-group-item.list-group-item-info
 							a(href='/contracts/'+'#{res[0]}') #{res[1]}
-						p.list-group-item #{res[2]}
+						//p.list-group-item #{res[2]}
 						p.list-group-item Client: 
 							a(href='/profile/'+'#{res[3]}') #{res[3]}
 						p.list-group-item Worker: 
@@ -27,7 +27,7 @@ block content
 					ul.list-group
 						h4.list-group-item.list-group-item-info
 							a(href='/contracts/'+'#{res[0]}') #{res[1]}
-						p.list-group-item #{res[2]}
+						//p.list-group-item #{res[2]}
 						p.list-group-item Client: 
 							a(href='/profile/'+'#{res[3]}') #{res[3]}
 						p.list-group-item Worker: 
@@ -47,7 +47,7 @@ block content
 					ul.list-group
 						h4.list-group-item.list-group-item-info
 							a(href='/contracts/'+'#{res[0]}') #{res[1]}
-						p.list-group-item #{res[2]}
+						//p.list-group-item #{res[2]}
 						p.list-group-item Client: 
 							a(href='/profile/'+'#{res[3]}') #{res[3]}
 						p.list-group-item Worker: 
