--- a/templates/users/profile.jade
+++ b/templates/users/profile.jade
@@ -15,6 +15,8 @@ block content
 			p Type: #{type}
 			br
 			if session.user == username
+				a(href='/schedule') Change Schedule
+				br
 				a(href='/profile/'+username+'/edit') Edit
 				br
 				a(href='/profile/'+username+'/delete') Delete
