--- a/templates/users/profile.jade
+++ b/templates/users/profile.jade
@@ -15,8 +15,9 @@ block content
 			p Type: #{type}
 			br
 			if session.user == username
-				a(href='/schedule') Change Schedule
-				br
+				if session.type == 'worker'
+					a(href='/schedule') Change Schedule
+					br
 				a(href='/profile/'+username+'/edit') Edit
 				br
 				a(href='/profile/'+username+'/delete') Delete
