Added tag field to various request views

--- a/templates/requests/pending.jade
+++ b/templates/requests/pending.jade
@@ -8,6 +8,7 @@ block content
 	.col-md-6
 		.panel.panel-default.text-left(style="padding-left:2%")
 			h1 #{title}
+			p Tag: #{tag}
 			p #{description}
 			p Client: 
 				a(href='/profile/'+client_username) #{client_username}
