--- a/templates/requests/request.jade
+++ b/templates/requests/request.jade
@@ -8,11 +8,10 @@ block content
 	.col-md-6
 		.panel.panel-default.text-left(style="padding-left:2%")
 			h1 #{title}
+			p Tag: #{tag}
 			p #{description}
-			p Client: 
-				a(href='/profile/'+client_username) #{client_username}
 			p Time: #{schedule}
-			p Address #{address}
+			p Address: #{address}
 			p Workers:
 			ul
 			each worker in worker_names
