--- a/templates/requests/editRequest.jade
+++ b/templates/requests/editRequest.jade
@@ -14,7 +14,7 @@ block content
 				.row
 					.col-md-8
 						//title
-						input.form-control.input-normal(type='text', name='title', placeholder='Title', maxlength="50" required, autofocus, value=title)
+						input.form-control.input-normal(type='text', name='title', placeholder='Title', maxlength="50", required, autofocus, value=title)
 						p
 				.row
 					.col-md-12
@@ -22,7 +22,7 @@ block content
 						textarea.form-control(name='description', placeholder='Description', rows='5')
 							| #{description}
 						p
-						input.form-control(type='text', name='address', placeholder='Address', maxlength="100" value=address)
+						input.form-control(type='text', name='address', placeholder='Address', maxlength="100", value=address)
 						p
 				.row
 					.col-md-6
