Finished chat functionality

--- a/templates/contracts/contract.jade
+++ b/templates/contracts/contract.jade
@@ -4,10 +4,12 @@ block title
 	title Contract #{result[0]}
 
 block content
+	script(src=url_for('static', filename='popup.js'))
 	.col-md-3
 	.col-md-6
 		.panel.panel-default.text-left(style="padding-left:2%")
 			h1 #{result[0]}
+				button.btn.btn-xs.btn-primary(onclick="popup('/chat/"+"#{result[6]}"+";"+result[3]+"'); return false;") Chat
 			p #{result[1]}
 			p Client: 
 				a(href='/profile/'+result[2]) #{result[2]}
