--- a/templates/requests/request.jade
+++ b/templates/requests/request.jade
@@ -1,9 +1,11 @@
 extends ./base.jade
 
+
 block title
 	title #{title}
 
 block content
+	script(src=url_for('static', filename='popup.js'))
 	.col-md-3
 	.col-md-6
 		.panel.panel-default.text-left(style="padding-left:2%")
@@ -24,6 +26,7 @@ block content
 								input(type='hidden', name='service_id', value=id)
 								a(href='/createcontract')
 									button.btn.btn-xs.btn-primary Contract
+								button.btn.btn-xs.btn-primary(onclick="popup('/chat/"+id+";"+worker[0]+"'); return false;") Chat
 
 			if session.user == client_username
 				p
