--- a/templates/base.jade
+++ b/templates/base.jade
@@ -3,7 +3,7 @@ html(lang='en')
 	head
 		link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css')
 		link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css')
-		link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-glyphicons.css')
+		//link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-glyphicons.css')
 		script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
 		script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
 		block title
@@ -17,17 +17,17 @@ html(lang='en')
 				#navbar
 					ul.nav.navbar-nav
 						//.active to add the selected thing
-						li
-							a(href='/') Home
-						li
-							a(href='/search') Search
+						//li
+						//	a(href='/') Home
+						//li
+						//	a(href='/search') Search
 
 						if session.user
 							if session.type == 'client'
 								li
-									a(href='/requests') Requests
-								li
 									a(href='/create') Create
+								li
+									a(href='/requests') Requests
 							else
 								li
 									a(href='/pending') Pending
