--- a/templates/requests/workerList.jade
+++ b/templates/requests/workerList.jade
@@ -5,7 +5,7 @@ block title
 
 block content
 	.text-left
-	form(method='POST', action='/requests/'+id+'/edit')
+	form(method='POST', action='/workerlist/'+id)
 		.row
 			.col-md-6
 				.row
