--- a/templates/base.jade
+++ b/templates/base.jade
@@ -6,8 +6,14 @@ html(lang='en')
 		//link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-glyphicons.css')
 		script(src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
 		script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
+
+		link(href=url_for('static', filename='css/star-rating.min.css'), media='all', rel='stylesheet', type='text/css')
+		script(src=url_for('static', filename='js/star-rating.min.js'), type='text/javascript')
+		script(src=url_for('static', filename='js/star-rating_locale_LANG.js'))
+
 		block title
 			title Helping Hand
+			
 	body(style='padding-top: 70px')
 		//Nav bar
 		nav.navbar.navbar-inverse.navbar-fixed-top
