--- a/templates/scheduler/setServiceSchedule.jade
+++ b/templates/scheduler/setServiceSchedule.jade
@@ -5,7 +5,7 @@ block title
 
 block content
 	h1 Availability
-	form(method='POST', action='/workerSchedule')
+	form(method='POST', action='/'+id+'/schedule')
 		.row
 			table(border='1', align='center')
 				tr 
