--- a/templates/requests/editRequest.jade
+++ b/templates/requests/editRequest.jade
@@ -25,7 +25,7 @@ block content
 						input.form-control(type='text', name='address', placeholder='Address', maxlength="100", value=address)
 						p
 					
-				a(href='/'+id+'/schedule') Change Schedule
+				a(href='/'+id+'/schedule') Change Schedule and Workers
 									br
 
 					.col-md-2
