--- a/templates/contracts/createContract.jade
+++ b/templates/contracts/createContract.jade
@@ -4,7 +4,7 @@ block title
 	title Create Contract
 
 block content
-	//client, worker, service_id, title, description
+	//client, worker, service_id, title, description, time
 	.text-left
 	form(method='POST', action='/submitContract')
 		.row
@@ -17,7 +17,11 @@ block content
 						p Address: #{address}
 						input(type='hidden', name='service_id', value=service_id)
 						input(type='hidden', name='worker_username', value=worker_username)
-
+				.row
+					.col-md-6
+						//Time of job
+						input.form-control.input-normal(type='text', name='time', placeholder='Time', required, value=time)
+						p
 				.row
 					.col-md-2
 						button.btn.btn-primary.btn-block.btn-signin(type='submit') Submit
