--- a/templates/contracts/viewContracts.jade
+++ b/templates/contracts/viewContracts.jade
@@ -17,7 +17,8 @@ block content
 							a(href='/profile/'+'#{res[3]}') #{res[3]}
 						p.list-group-item Worker: 
 							a(href='/profile/'+'#{res[4]}') #{res[4]}
-						p.list-group-item Status: #{res[5]}
+						p.list-group-item Start Time: #{res[5]}
+						p.list-group-item Status: #{res[6]}
 						if session.type == 'client'
 							a.btn.btn-lg.btn-primary.btn-block(href='/contracts/'+'#{res[0]}'+'/complete') Complete
 	.row
@@ -33,7 +34,8 @@ block content
 							a(href='/profile/'+'#{res[3]}') #{res[3]}
 						p.list-group-item Worker: 
 							a(href='/profile/'+'#{res[4]}') #{res[4]}
-						p.list-group-item Status: #{res[5]}
+						p.list-group-item Start Time: #{res[5]}
+						p.list-group-item Status: #{res[6]}
 						if session.type == 'worker'
 							.row
 								.col-md-6
@@ -58,4 +60,5 @@ block content
 							a(href='/profile/'+'#{res[3]}') #{res[3]}
 						p.list-group-item Worker: 
 							a(href='/profile/'+'#{res[4]}') #{res[4]}
-						p.list-group-item Status: #{res[5]}
+						p.list-group-item Start Time: #{res[5]}
+						p.list-group-item Status: #{res[6]}
